2006-05-22  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by adele.
        
        Fix build.

        * WebKitWin.vcproj/WebKitWin.sln:

2006-05-20  Dave Hyatt <hyatt@apple.com>

        Fix the Cairo double buffer so that it is only the size of
        the dirty rect.

        Reviewed by xenon

        * WebFramePrivate.cpp:
        (WebKit::WebFramePrivate::paint):

2006-05-14  Steve Falkenburg  <sfalken@apple.com>

        Update to new file paths

        * WebFramePrivate.cpp:

2006-05-09  Darin Adler  <darin@apple.com>

        - attempt to fix the Windows build

        * WebView.cpp: (WebKit::WebViewWndProc): Convert to String explicitly via UChar instead of
        implicitly via QChar.

2006-05-09  Steve Falkenburg  <sfalken@apple.com>

        Add host calback so caller can determine success/failure of a page load.
        
        Reviewed by kevin.

        * WebFramePrivate.cpp:
        (WebKit::WebFramePrivate::loadFilePath): Style fix.
        (WebKit::WebFramePrivate::loadHTMLString): Style fix.
        (WebKit::WebFramePrivate::receivedAllData): Call host->loadEnd() with data indicating success/failure of load.
        * WebKitWin.vcproj/WebKitWin/WebKitWin.vcproj: Fix include paths.
        * WebView.cpp: 
        (WebKit::WebView::WebView): Don't load boilerplate test HTML from core code. 
        * public/WebHost.h: Add host callback for loadEnd().

2006-05-02  Darin Adler  <darin@apple.com>

        * ChangeLog: Added.
        * <most files: Cleared the stray "executable" bit that was on most files.

---
